--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "antd": "^3.13.0",
+    "axios": "^0.18.0",
+    "axios-retry": "^3.1.2",
+    "dotenv": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-syntax-highlighter": "^10.1.2"
+    "react-syntax-highlighter": "^10.1.2",
+    "redux": "^4.0.1",
+    "redux-promise-middleware": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
