--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-router-protected-route": "^1.0.0",
     "react-scripts": "^2.1.5",
     "react-syntax-highlighter": "^10.1.2",
     "redux": "^4.0.1",
